--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "node scripts/clean.js",
     "build": "npm run clean && parcel build src/*.html --public-url . --detailed-report --experimental-scope-hoisting",
     "watch": "npm run clean && parcel watch src/*.html --public-url . --detailed-report --experimental-scope-hoisting",
-    "start": "parcel src/index.html --open"
+    "start": "parcel src/index.html --open",
+    "hidden": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
