--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
   },
   "homepage": "https://github.com/buermarc/shwebpro#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.12.4",
     "shelljs": "^0.8.3"
+  },
+  "dependencies": {
+    "dexie": "^2.0.4",
+    "navigo": "^7.1.2"
   }
 }
